Fix #2927 new task Add space between top bar and ticket, See lottoland.com. There's a gap where the operator puts branding in the background tied to the lottery. We won't worry about the branding for now.

--- a/lot-ticket/app/css/app.css
+++ b/lot-ticket/app/css/app.css
@@ -343,7 +343,8 @@ md-list.tickets-group {
 	}
 
 	.layout-margin.main-panel {
-		padding-top: 50px;
+		position: relative;
+		top: 70px;
 	}
 }
 
